Support for GetTable
